`fix`: 🐛 🎨 fixed spacing and color

--- a/theme/style.css
+++ b/theme/style.css
@@ -1705,10 +1705,6 @@ body{
   width: 328px;
 }
 
-.w-\[332px\]{
-  width: 332px;
-}
-
 .w-\[348px\]{
   width: 348px;
 }
@@ -1757,20 +1753,8 @@ body{
   max-width: 742px;
 }
 
-.max-w-full{
-  max-width: 100%;
-}
-
 .max-w-none{
   max-width: none;
-}
-
-.max-w-\[600px\]{
-  max-width: 600px;
-}
-
-.max-w-\[332px\]{
-  max-width: 332px;
 }
 
 .flex-initial{
@@ -2581,6 +2565,11 @@ body{
 .text-tertiary{
   --tw-text-opacity: 1;
   color: rgb(122 122 122 / var(--tw-text-opacity));
+}
+
+.text-\[\#2a2a2a\]{
+  --tw-text-opacity: 1;
+  color: rgb(42 42 42 / var(--tw-text-opacity));
 }
 
 .shadow-lg{
@@ -3709,10 +3698,6 @@ html {
     margin-bottom: 140px;
   }
 
-  .lg\:block{
-    display: block;
-  }
-
   .lg\:flex{
     display: flex;
   }
@@ -3741,6 +3726,10 @@ html {
     max-height: 500px;
   }
 
+  .lg\:w-\[332px\]{
+    width: 332px;
+  }
+
   .lg\:w-\[343px\]{
     width: 343px;
   }
@@ -3755,6 +3744,10 @@ html {
 
   .lg\:w-\[463px\]{
     width: 463px;
+  }
+
+  .lg\:w-\[600px\]{
+    width: 600px;
   }
 
   .lg\:w-\[624px\]{
@@ -3777,18 +3770,6 @@ html {
     width: 100%;
   }
 
-  .lg\:w-\[332px\]{
-    width: 332px;
-  }
-
-  .lg\:w-\[600px\]{
-    width: 600px;
-  }
-
-  .lg\:w-\[444px\]{
-    width: 444px;
-  }
-
   .lg\:max-w-\[348px\]{
     max-width: 348px;
   }
@@ -3799,10 +3780,6 @@ html {
 
   .lg\:max-w-\[720px\]{
     max-width: 720px;
-  }
-
-  .lg\:max-w-\[332px\]{
-    max-width: 332px;
   }
 
   .lg\:grid-cols-2{
@@ -3831,10 +3808,6 @@ html {
 
   .lg\:justify-center{
     justify-content: center;
-  }
-
-  .lg\:gap-\[112px\]{
-    gap: 112px;
   }
 
   .lg\:gap-\[20px\]{
@@ -4015,10 +3988,6 @@ html {
     width: fit-content;
   }
 
-  .xl\:w-\[332px\]{
-    width: 332px;
-  }
-
   .xl\:max-w-none{
     max-width: none;
   }
@@ -4103,10 +4072,6 @@ html {
     margin-top: 37.5px;
   }
 
-  .\32xl\:block{
-    display: block;
-  }
-
   .\32xl\:flex{
     display: flex;
   }
@@ -4135,16 +4100,8 @@ html {
     width: 532px;
   }
 
-  .\32xl\:w-\[332px\]{
-    width: 332px;
-  }
-
   .\32xl\:max-w-\[1084px\]{
     max-width: 1084px;
-  }
-
-  .\32xl\:max-w-\[600px\]{
-    max-width: 600px;
   }
 
   .\32xl\:items-center{
